// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test tabs active 1`] = `
"<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"width: 100px;\\">选项1</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"width: 100px;\\">选项2</div>
      <div class=\\"var-tab var--box var-tab--active var-tab--horizontal\\" style=\\"width: 100px;\\">选项3</div>
      <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 100px; transform: translateX(0px);\\"></div>
    </div>
  </div>
</transition-stub>
<div class=\\"var-tabs-items\\" style=\\"height: 0px;\\">
  <transition-stub>
    <div class=\\"var-tab-item\\" style=\\"display: none;\\">
      <!--v-if-->
    </div>
  </transition-stub>
  <transition-stub>
    <div class=\\"var-tab-item\\" style=\\"display: none;\\">
      <!--v-if-->
    </div>
  </transition-stub>
  <transition-stub>
    <div class=\\"var-tab-item\\">视图3</div>
  </transition-stub>
</div>"
`;

exports[`test tabs disabled 1`] = `
"<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding\\" modelvalue=\\"1\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
      <div class=\\"var-tab var--box var-tab--disabled var-tab--horizontal\\">选项1</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\">选项2</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\">选项3</div>
      <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 0px; transform: translateX(0px);\\"></div>
    </div>
  </div>
</transition-stub>"
`;

exports[`test tabs example 1`] = `
"<div class=\\"app-type\\">基本使用</div>
<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
      <div class=\\"var-tab var--box var-tab--active var-tab--horizontal\\">选项1</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\">选项2</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\">选项3</div>
      <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 0px; transform: translateX(0px);\\"></div>
    </div>
  </div>
</transition-stub>
<div class=\\"app-type\\">修改样式</div>
<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding var-elevation--4\\" style=\\"background: rgb(41, 121, 255);\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
      <div class=\\"var-tab var--box var-tab--active var-tab--horizontal\\" style=\\"color: rgb(255, 255, 255);\\">选项1</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项2</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项3</div>
      <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 0px; transform: translateX(0px); background: rgb(255, 255, 255);\\"></div>
    </div>
  </div>
</transition-stub>
<div class=\\"app-type\\">禁用选项</div>
<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding var-elevation--4\\" style=\\"background: rgb(41, 121, 255);\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
      <div class=\\"var-tab var--box var-tab--active var-tab--horizontal\\" style=\\"color: rgb(255, 255, 255);\\">选项1</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项2</div>
      <div class=\\"var-tab var--box var-tab--disabled var-tab--horizontal\\">禁用选项</div>
      <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 0px; transform: translateX(0px); background: rgb(255, 255, 255);\\"></div>
    </div>
  </div>
</transition-stub>
<div class=\\"app-type\\">开启滚动</div>
<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding var-elevation--4\\" style=\\"background: rgb(41, 121, 255);\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal-scrollable var-tabs--layout-horizontal\\">
      <div class=\\"var-tab var--box var-tab--active var-tab--horizontal\\" style=\\"color: rgb(255, 255, 255);\\">选项1</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项2</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项3</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项4</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项5</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项6</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项7</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项8</div>
      <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 0px; transform: translateX(0px); background: rgb(255, 255, 255);\\"></div>
    </div>
  </div>
</transition-stub>
<div class=\\"app-type\\">选项卡垂直布局</div>
<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-vertical var-tabs--layout-horizontal-padding var-elevation--4\\" style=\\"background: rgb(41, 121, 255);\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
      <div class=\\"var-tab var--box var-tab--active var-tab--vertical\\" style=\\"color: rgb(255, 255, 255);\\"><i class=\\"var-icon var-icon--set var-icon-information icon\\" style=\\"transition: all 0ms;\\"></i>
        <div>选项1</div>
      </div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--vertical\\" style=\\"color: rgba(255, 255, 255, 0.6);\\"><i class=\\"var-icon var-icon--set var-icon-warning icon\\" style=\\"transition: all 0ms;\\"></i>
        <div>选项2</div>
      </div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--vertical\\" style=\\"color: rgba(255, 255, 255, 0.6);\\"><i class=\\"var-icon var-icon--set var-icon-error icon\\" style=\\"transition: all 0ms;\\"></i>
        <div>选项3</div>
      </div>
      <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 0px; transform: translateX(0px); background: rgb(255, 255, 255);\\"></div>
    </div>
  </div>
</transition-stub>
<div class=\\"app-type\\">容器垂直布局</div>
<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-vertical-padding var-elevation--4 vertical-tabs\\" style=\\"background: rgb(41, 121, 255);\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-vertical\\">
      <div class=\\"var-tab var--box var-tab--active var-tab--horizontal\\" style=\\"color: rgb(255, 255, 255);\\">选项1</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项2</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项3</div>
      <div class=\\"var-tabs__indicator var-tabs--layout-vertical-indicator\\" style=\\"height: 0px; transform: translateY(0px); background: rgb(255, 255, 255);\\"></div>
    </div>
  </div>
</transition-stub>
<div class=\\"app-type\\">视图联动</div>
<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding var-elevation--4\\" style=\\"background: rgb(41, 121, 255);\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
      <div class=\\"var-tab var--box var-tab--active var-tab--horizontal\\" style=\\"color: rgb(255, 255, 255);\\">选项1</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项2</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项3</div>
      <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 0px; transform: translateX(0px); background: rgb(255, 255, 255);\\"></div>
    </div>
  </div>
</transition-stub>
<div class=\\"var-tabs-items\\" style=\\"height: 0px;\\">
  <transition-stub style=\\"padding: 8px 5px;\\">
    <div class=\\"var-tab-item\\">呜啦啦啦火车笛，随着奔腾的马蹄。
      小妹妹吹着口琴，夕阳下美了剪影。
      我用子弹写日记，介绍完了风景。
      接下来换介绍我自己。
      我虽然是个牛仔，在酒吧只点牛奶。
      为什么不喝啤酒，因为啤酒伤身体。</div>
  </transition-stub>
  <transition-stub style=\\"padding: 8px 5px;\\">
    <div class=\\"var-tab-item\\" style=\\"display: none;\\">
      <!--v-if-->
    </div>
  </transition-stub>
  <transition-stub style=\\"padding: 8px 5px;\\">
    <div class=\\"var-tab-item\\" style=\\"display: none;\\">
      <!--v-if-->
    </div>
  </transition-stub>
</div>
<div class=\\"app-type\\">开启粘性布局</div>
<div class=\\"var-sticky\\" style=\\"z-index: 10; width: 0px; height: 0px;\\">
  <div class=\\"var-sticky__wrapper\\" style=\\"z-index: 10; position: fixed; width: 0px; height: 0px; left: 0px; top: 50px;\\">
    <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding var-elevation--4\\" style=\\"background: rgb(41, 121, 255);\\">
      <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
        <div class=\\"var-tab var--box var-tab--active var-tab--horizontal\\" style=\\"color: rgb(255, 255, 255);\\">选项1</div>
        <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项2</div>
        <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"color: rgba(255, 255, 255, 0.6);\\">选项3</div>
        <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 0px; transform: translateX(0px); background: rgb(255, 255, 255);\\"></div>
      </div>
    </div>
  </div>
</div>
<div style=\\"height: 120vh;\\"></div>"
`;

exports[`test tabs relation tabsItems 1`] = `
"<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"width: 100px;\\">选项1</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"width: 100px;\\">选项2</div>
      <div class=\\"var-tab var--box var-tab--active var-tab--horizontal\\" style=\\"width: 100px;\\">选项3</div>
      <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 100px; transform: translateX(0px);\\"></div>
    </div>
  </div>
</transition-stub>
<div class=\\"var-tabs-items\\" style=\\"height: 0px;\\">
  <transition-stub>
    <div class=\\"var-tab-item\\" style=\\"display: none;\\">
      <!--v-if-->
    </div>
  </transition-stub>
  <transition-stub>
    <div class=\\"var-tab-item\\" style=\\"display: none;\\">
      <!--v-if-->
    </div>
  </transition-stub>
  <transition-stub>
    <div class=\\"var-tab-item\\">视图3</div>
  </transition-stub>
</div>"
`;

exports[`test tabs relation tabsItems 2`] = `
"<transition-stub>
  <div class=\\"var-tabs var--box var-tabs--item-horizontal var-tabs--layout-horizontal-padding\\">
    <div class=\\"var-tabs__tab-wrap var-tabs--layout-horizontal\\">
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"width: 100px;\\">选项1</div>
      <div class=\\"var-tab var--box var-tab--active var-tab--horizontal\\" style=\\"width: 100px;\\">选项2</div>
      <div class=\\"var-tab var--box var-tab--inactive var-tab--horizontal\\" style=\\"width: 100px;\\">选项3</div>
      <div class=\\"var-tabs__indicator var-tabs--layout-horizontal-indicator\\" style=\\"width: 100px; transform: translateX(0px);\\"></div>
    </div>
  </div>
</transition-stub>
<div class=\\"var-tabs-items\\" style=\\"height: 0px;\\">
  <transition-stub>
    <div class=\\"var-tab-item\\" style=\\"display: none;\\">
      <!--v-if-->
    </div>
  </transition-stub>
  <transition-stub>
    <div class=\\"var-tab-item\\">视图2</div>
  </transition-stub>
  <transition-stub>
    <div class=\\"var-tab-item\\" style=\\"display: none;\\">视图3</div>
  </transition-stub>
</div>"
`;
